--- a/estilosema/estilos.css
+++ b/estilosema/estilos.css
@@ -516,8 +516,21 @@
 }
 
 .fotos1 {
-    color: white;
+    width: 800px;
+    width: 600px;
+    overflow: hidden;
     margin: 10px;
+}
+
+.primeraFoto {
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
+    object-fit: cover;
+}
+
+.primeraFoto:hover {
+    transform: scale(1.2);
 }
 
 .fotos2 {
