--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,5 +1,9 @@
 @import 'variables';
 @import 'header';
+@import 'nav';
+@import 'main1';
+@import 'main2';
+@import 'footer';
 
 :root {
     --color1: #FD790A;
@@ -49,228 +53,6 @@
     height: 100vh;
     margin: 0;
 }
-
-/* MENU DE NAVEGACION */
-/* .menu{
-    grid-area: menu;
-    background-color: #FD790A;
-    margin-top: 10px;
-    padding: 5px;
-    text-align: center;
-}
-
-.menu li{
-    display: inline-block;
-    text-transform: uppercase;
-    width: 15%;
-    font-size: 25px;
-}
-
-.menu li a{
-    text-decoration: none;
-    color: white;
-}
-
-.menu li a:hover{
-    color: #00315A;
-    text-decoration: underline;
-} */
-
-/* INICIO MENU DE NAVEGACION BOOTSTRAP*/
-.navbar {
-    grid-area: navbar;
-    background-color: #FD790A !important;
-    color: #FFFFFF;
-}
-
-.navbar-brand {
-    color: #00315A !important;
-    text-transform: uppercase;
-    font-weight: bolder;
-}
-
-.navbar-brand:hover {
-    color: #FFFFFF !important;
-}
-
-.collapse {
-    background-color: #FD790A;
-}
-
-.nav-link {
-    text-transform: uppercase;
-    font-size: 25px;
-    font-weight: bolder;
-    color: #FFFFFF !important;
-
-}
-
-.nav-link:hover {
-    background-color: #00315A;
-    color: #FCA500 !important;
-}
-
-.navbar-toggler {
-    background-color: #00315A;
-}
-
-/* FIN DE MENU DE NAVEGACION BOOTSTRAP*/
-
-/* PRINCIPAL */
-.fotosPrincipales {
-    grid-area: fotosPrincipales;
-    background-color: black;
-    margin-top: 10px;
-    text-align: center;
-}
-
-.fotosPrincipales .foto1 {
-    padding: 10px;
-    width: 40%;
-    border: 3px solid white;
-    background-color: #00315A;
-    margin: 10px;
-}
-
-.fotosPrincipales .foto2 {
-    padding: 10px;
-    width: 40%;
-    border: 3px solid white;
-    background-color: #00315A;
-    margin: 10px;
-}
-
-.fotosPrincipales .foto3 {
-    padding: 10px;
-    width: 40%;
-    border: 3px solid white;
-    background-color: #00315A;
-    margin: 10px;
-}
-
-.fotosPrincipales .foto4 {
-    padding: 10px;
-    width: 40%;
-    border: 3px solid white;
-    background-color: #00315A;
-    margin: 10px;
-}
-
-/* PRINCIPAL DOS */
-.masFotos {
-    grid-area: masFotos;
-    justify-self: center;
-    text-align: center;
-    align-self: center;
-    color: #FFFFFF;
-    width: 50%;
-    background-color: #00315A;
-    border: 3px solid #FFFFFF;
-    padding: 20px;
-
-}
-
-.masFotos h1 {
-    color: yellow;
-    margin-bottom: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bolder;
-    font-style: italic;
-    font-size: 40px;
-    text-shadow: 0 0 10px #000000;
-}
-
-.masFotos p {
-    margin-bottom: 30px;
-}
-
-#nikonBoton {
-    border: none;
-    padding: 10px;
-    background-color: yellow;
-    color: black;
-    border-radius: 2px;
-    border-bottom: 03px solid black;
-    cursor: grab;
-    transition: all 0.5s ease-out;
-    margin-top: 5px;
-    margin-bottom: 20px;
-}
-
-#nikonBoton:hover {
-    padding: 15px;
-    background-color: black;
-    color: white;
-    border-bottom: 03px solid yellow;
-}
-
-/* .masFotos a {
-    background-color: #FD790A;
-    color: #00315A;
-    text-decoration: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-}
-
-.masFotos a:hover {
-    background-color: #FFFFFF;
-
-} */
-
-/* PUBLICIDAD */
-.publicidadNikon {
-    grid-area: publicidadNikon;
-    text-align: center;
-}
-
-.videoNikon {
-    margin: 10px;
-    border: 10px solid #00315A;
-}
-
-/* PIE DE PAGINA */
-.pieDePagina {
-    grid-area: pieDePagina;
-    background-color: #00315A;
-    margin-top: 10px;
-    /* text-align: center; */
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.pieDePaginaDerechos {
-    color: var(--color2);
-    margin-bottom: 10px;
-    margin: 0 auto;
-}
-
-.redesSociales {
-    font-size: 30px;
-    letter-spacing: 3px;
-}
-
-.redesSociales i {
-    color: #FD790A;
-}
-
-/* ICONO WHATSAPP */
-.icono i {
-    height: 50px;
-    width: 50px;
-    background-color: green;
-    color: #FFFFFF;
-    position: fixed;
-    right: 40px;
-    bottom: 100px;
-    font-size: 50px;
-    text-align: center;
-    border-radius: 50px;
-    box-shadow: 0 0 10px green;
-}
-
 /* FIN GRILLA ------------------------------------------------------------------------------- FIN GRILLA */
 
 /* INICIO MEDIAS QUERIES INDEX ------------------------------------------------------------------------------- INICIO MEDIAS QUERIES INDEX */
@@ -498,13 +280,47 @@
 }
 
 .fotos1 {
-    color: white;
+    width: 800px;
+    width: 600px;
+    overflow: hidden;
     margin: 10px;
 }
 
+.primeraFoto {
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
+    object-fit: cover;
+}
+
+.primeraFoto:hover {
+    transform: scale(1.2);
+}
+
+.textoFoto1 {
+    color: #FFFFFF;
+}
+
+.textoFoto1 span {
+    color: #ffffff5d;
+}
+
 .fotos2 {
-    color: white;
+    width: 800px;
+    width: 600px;
+    overflow: hidden;
     margin: 10px;
+}
+
+.segundaFoto {
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
+    object-fit: cover;
+}
+
+.segundaFoto:hover {
+    transform: scale(1.2);
 }
 
 .publicidadNikon1 {
@@ -513,7 +329,6 @@
     justify-content: center;
     align-items: center;
 }
-
 /* FIN PAGINA FOTOS ------------------------------------------------------------------------------- FIN PAGINA FOTOS */
 
 /* INICIO MEDIAS QUERIES FOTOS ------------------------------------------------------------------------------- INICIO MEDIAS QUERIES FOTOS */
