--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,10 +1,11 @@
 /* CABECERA */
+
 .header {
     grid-area: header;
     height: 150px;
     width: 100%;
-    background-color: $color3;
-    background-image: linear-gradient(to right, $color3, $color1);
+    background-color: $bl-color3;
+    background-image: linear-gradient(to right, $bl-color3, $or-color1);
     padding: 30px;
 
     .headerLogo {
@@ -15,7 +16,7 @@
     }
 
     h1 {
-        color: $color2;
+        color: $wh-color2;
         text-transform: uppercase;
         font-size: 80px;
         float: right;
