--- a/scss/_main2.scss
+++ b/scss/_main2.scss
@@ -1,4 +1,5 @@
 /* PRINCIPAL DOS */
+
 .masFotos {
     grid-area: masFotos;
     justify-self: center;
@@ -10,40 +11,39 @@
     border: 3px solid #FFFFFF;
     padding: 20px;
 
-}
+    h1 {
+        color: yellow;
+        margin-bottom: 20px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bolder;
+        font-style: italic;
+        font-size: 40px;
+        text-shadow: 0 0 10px #000000;
+    }
 
-.masFotos h1 {
-    color: yellow;
-    margin-bottom: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bolder;
-    font-style: italic;
-    font-size: 40px;
-    text-shadow: 0 0 10px #000000;
-}
+    p {
+        margin-bottom: 30px;
+    }
 
-.masFotos p {
-    margin-bottom: 30px;
-}
+    #nikonBoton {
+        border: none;
+        padding: 10px;
+        background-color: yellow;
+        color: black;
+        border-radius: 2px;
+        border-bottom: 03px solid #000000;
+        cursor: grab;
+        transition: all 0.5s ease-out;
+        margin-top: 5px;
+        margin-bottom: 20px;
+    }
 
-#nikonBoton {
-    border: none;
-    padding: 10px;
-    background-color: yellow;
-    color: black;
-    border-radius: 2px;
-    border-bottom: 03px solid black;
-    cursor: grab;
-    transition: all 0.5s ease-out;
-    margin-top: 5px;
-    margin-bottom: 20px;
-}
-
-#nikonBoton:hover {
-    padding: 15px;
-    background-color: black;
-    color: white;
-    border-bottom: 03px solid yellow;
+    #nikonBoton:hover {
+        padding: 15px;
+        background-color: #000000;
+        color: #FFFFFF;
+        border-bottom: 03px solid yellow;
+    }
 }
 
 /* .masFotos a {
