--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,59 +1,24 @@
-@import 'variables';
+@import 'variables/variables';
+@import 'body';
 @import 'header';
 @import 'nav';
 @import 'main1';
 @import 'main2';
+@import 'aside';
 @import 'footer';
+@import 'fotos/fotos';
+@import 'tienda/tienda';
+@import 'sobremi/sobremi';
+@import 'contacto/contacto';
 
-:root {
-    --color1: #FD790A;
-    --color2: #FFFFFF;
-    --color3: #00315A;
-    --color4: #FCA500;
-    --color5: #000000;
-}
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-/* TIPOGRAFIA */
-* {
-    font-family: OpenSans;
-}
 
-/* html{
-    scroll-behavior: smooth;
-} */
-@font-face {
-    font-family: OpenSans;
-    src: url(../fonts/OpenSans-VariableFont_wdth\,wght.ttf);
-}
 
-/* INDEX ------------------------------------------------------------------------------- INDEX */
-/* BODY ------------------------------------------------------------------------------- BODY */
-.fondoGeneral {
-    background-color: $color5;
-}
 
-/* INICIO GRILLA ------------------------------------------------------------------------------- INICIO GRILLA */
-#grilla {
-    display: grid;
-    grid-template-areas:
-        "header header"
-        "navbar navbar"
-        "fotosPrincipales fotosPrincipales"
-        "publicidadNikon publicidadNikon"
-        "masFotos masFotos"
-        "pieDePagina pieDePagina";
-    grid-template-columns: repeat(2fr);
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    height: 100vh;
-    margin: 0;
-}
-/* FIN GRILLA ------------------------------------------------------------------------------- FIN GRILLA */
+
+
+
 
 /* INICIO MEDIAS QUERIES INDEX ------------------------------------------------------------------------------- INICIO MEDIAS QUERIES INDEX */
 @media only screen and (min-width: 320px) and (max-width: 479px) {
@@ -110,7 +75,7 @@
 
     /* PRINCIPAL */
     .fotosPrincipales {
-        background-color: var(--color3);
+        background-color: #00315A;
         margin-top: 0px;
         width: 100%;
         display: flex;
@@ -121,30 +86,41 @@
     .fotosPrincipales .foto1 {
         padding: 10px;
         width: 300px;
-        border: 5px solid var(--color5);
-        background-color: var(--color2);
+        
+        &:hover {
+            border: 3px solid #FD790A;
+            background-color: #FD790A;
+        }
     }
 
     .fotosPrincipales .foto2 {
         padding: 10px;
         width: 300px;
-        border: 5px solid var(--color5);
-        background-color: var(--color2);
+        
+        &:hover {
+            border: 3px solid #FD790A;
+            background-color: #FD790A;
+        }
     }
 
     .fotosPrincipales .foto3 {
         padding: 10px;
         width: 300px;
-        border: 5px solid var(--color5);
-        background-color: var(--color2);
+        
+        &:hover {
+            border: 3px solid #FD790A;
+            background-color: #FD790A;
+        }
     }
 
     .fotosPrincipales .foto4 {
         padding: 10px;
         width: 300px;
-        border: 5px solid var(--color5);
-        background-color: var(--color2);
-
+        
+        &:hover {
+            border: 3px solid #FD790A;
+            background-color: #FD790A;
+        }
     }
 
     /* PRINCIPAL DOS */
@@ -167,7 +143,7 @@
 
     .videoNikon {
         margin: 20px;
-        border: 5px solid #00315A;
+        // border: 5px solid #00315A;
         width: 300px;
         height: 200px;
     }
@@ -252,304 +228,3 @@
 }
 
 /* FIN MEDIAS QUERIES INDEX ------------------------------------------------------------------------------- FIN MEDIAS QUERIES INDEX */
-
-/* INICIO PAGINA FOTOS ------------------------------------------------------------------------------- INICIO PAGINA FOTOS */
-#grilla1 {
-    display: grid;
-    grid-template-areas:
-        "header header"
-        "navbar navbar"
-        "fotos fotos"
-        "publicidadNikon1 publicidadNikon1"
-        "pieDePagina pieDePagina";
-    grid-template-columns: repeat(2fr);
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    height: 100vh;
-    margin: 0;
-}
-
-.fotos {
-    grid-area: fotos;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    padding: 10px;
-    text-align: center;
-}
-
-.fotos1 {
-    width: 800px;
-    width: 600px;
-    overflow: hidden;
-    margin: 10px;
-}
-
-.primeraFoto {
-    width: 100%;
-    height: 100%;
-    transition: 0.5s;
-    object-fit: cover;
-}
-
-.primeraFoto:hover {
-    transform: scale(1.2);
-}
-
-.textoFoto1 {
-    color: #FFFFFF;
-}
-
-.textoFoto1 span {
-    color: #ffffff5d;
-}
-
-.fotos2 {
-    width: 800px;
-    width: 600px;
-    overflow: hidden;
-    margin: 10px;
-}
-
-.segundaFoto {
-    width: 100%;
-    height: 100%;
-    transition: 0.5s;
-    object-fit: cover;
-}
-
-.segundaFoto:hover {
-    transform: scale(1.2);
-}
-
-.publicidadNikon1 {
-    grid-area: publicidadNikon1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-/* FIN PAGINA FOTOS ------------------------------------------------------------------------------- FIN PAGINA FOTOS */
-
-/* INICIO MEDIAS QUERIES FOTOS ------------------------------------------------------------------------------- INICIO MEDIAS QUERIES FOTOS */
-@media only screen and (min-width: 320px) and (max-width: 479px) {
-    #grilla1 {
-        grid-template-areas:
-            "header"
-            "navbar"
-            "fotos"
-            "publicidadNikon1"
-            "pieDePagina";
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
-    }
-
-    .fotos {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        text-align: center;
-    }
-}
-
-/* FIN MEDIAS QUERIES FOTOS ------------------------------------------------------------------------------- FIN MEDIAS QUERIES FOTOS */
-
-/* INICIO PAGINA TIENDA ------------------------------------------------------------------------------- INICIO PAGINA TIENDA */
-/* MENU DE NAVEGACION */
-.menu {
-    grid-area: menu;
-    background-color: #FD790A;
-    padding: 5px;
-    text-align: center;
-}
-
-.menu li {
-    display: inline-block;
-    text-transform: uppercase;
-    width: 15%;
-    font-size: 25px;
-}
-
-.menu li a {
-    text-decoration: none;
-    color: white;
-}
-
-.menu li a:hover {
-    color: #00315A;
-}
-
-/* FIN MENU DE NAVEGACION */
-
-.sectionTienda1 {
-    margin-top: 10px;
-    padding: 10px;
-}
-
-.sectionTienda1 img {
-    margin: 10px;
-    display: inline-block;
-}
-
-.sectionTienda1 table {
-    background-color: white;
-    margin: 10px;
-    display: inline-block;
-}
-
-.sectionTienda1 h2 {
-    margin: 20px;
-    color: #FFFFFF;
-    font-size: 30px;
-    display: inline-block;
-}
-
-/* SECTION 2 */
-.sectionTienda2 {
-    margin-top: 10px;
-    padding: 10px;
-}
-
-.sectionTienda2 img {
-    margin: 10px;
-    display: inline-block;
-}
-
-.sectionTienda2 table {
-    background-color: white;
-    margin: 10px;
-    display: inline-block;
-}
-
-.sectionTienda2 h2 {
-    margin: 20px;
-    color: #FFFFFF;
-    font-size: 30px;
-    display: inline-block;
-}
-
-/* SECTION 3 */
-.sectionTienda3 {
-    margin-top: 10px;
-    padding: 10px;
-}
-
-.sectionTienda3 img {
-    margin: 10px;
-    display: inline-block;
-}
-
-.sectionTienda3 table {
-    background-color: white;
-    margin: 10px;
-    display: inline-block;
-}
-
-.sectionTienda3 h2 {
-    margin: 20px;
-    color: #FFFFFF;
-    font-size: 30px;
-    display: inline-block;
-}
-
-.publicidadNikon {
-    margin-top: 10px;
-}
-
-/* FIN PAGINA TIENDA ------------------------------------------------------------------------------- FIN PAGINA TIENDA */
-
-/* INICIO PAGINA CONTACTO ------------------------------------------------------------------------------- INICIO PAGINA CONTACTO */
-/* MENU DE NAVEGACION */
-.menu {
-    grid-area: menu;
-    background-color: #FD790A;
-    padding: 5px;
-    text-align: center;
-}
-
-.menu li {
-    display: inline-block;
-    text-transform: uppercase;
-    width: 15%;
-    font-size: 25px;
-}
-
-.menu li a {
-    text-decoration: none;
-    color: white;
-}
-
-.menu li a:hover {
-    color: #00315A;
-}
-
-/* FIN MENU DE NAVEGACION */
-
-.principalContacto1 {
-    color: #FFFFFF;
-    border: 5px solid #00315A;
-    background-color: #FD790A;
-    display: inline-block;
-}
-
-.principalContacto2 {
-    color: #FFFFFF;
-    border: 5px solid #00315A;
-    background-color: #FD790A;
-    display: inline-block;
-    margin: 10px;
-}
-
-.principalContacto3 {
-    color: #FFFFFF;
-    border: 5px solid #00315A;
-    background-color: #FD790A;
-    display: inline-block;
-    margin: 10px;
-
-}
-
-/* FIN PAGINA CONTACTO ------------------------------------------------------------------------------- FIN PAGINA CONTACTO */
-
-/* INICIO PAGINA SOBRE MI ------------------------------------------------------------------------------- INICIO PAGINA SOBRE MI */
-/* MENU DE NAVEGACION */
-.menu {
-    grid-area: menu;
-    background-color: #FD790A;
-    padding: 5px;
-    text-align: center;
-}
-
-.menu li {
-    display: inline-block;
-    text-transform: uppercase;
-    width: 15%;
-    font-size: 25px;
-}
-
-.menu li a {
-    text-decoration: none;
-    color: white;
-}
-
-.menu li a:hover {
-    color: #00315A;
-}
-
-/* FIN MENU DE NAVEGACION */
-
-.descripcion {
-    color: #FFFFFF;
-    border: 5px solid #00315A;
-    display: inline-block;
-    margin: 10px;
-}
-
-.principalSobreMi {
-    border: 5px solid #00315A;
-    display: inline-block;
-    margin: 10px;
-}
-
-/* FIN PAGINA SOBRE MI ------------------------------------------------------------------------------- FIN PAGINA SOBRE MI */
