--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -115,6 +115,17 @@
 .navbar .navbar-toggler {
   background-color: #FD790A;
 }
+.navbar .dropdown-menu {
+  background-color: #00315A;
+}
+.navbar .dropdown-menu .dropdown-item {
+  color: #FFFFFF;
+  font-weight: bolder;
+  text-transform: uppercase;
+}
+.navbar .dropdown-menu .dropdown-item:hover {
+  background-color: #FCA500;
+}
 
 /* FIN DE MENU DE NAVEGACION BOOTSTRAP*/
 /* PRINCIPAL */
