--- a/scss/fotos/_fotos.scss
+++ b/scss/fotos/_fotos.scss
@@ -17,7 +17,7 @@
 .fotos {
     grid-area: fotos;
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
@@ -70,11 +70,57 @@
     }
 }
 
+.fotos3 {
+    width: 800px;
+    width: 600px;
+    overflow: hidden;
+    margin: 10px;
+
+    .tercerFoto {
+        width: 100%;
+        height: 100%;
+        transition: 0.5s;
+        object-fit: cover;
+
+        &:hover {
+            transform: scale(1.2);
+        }
+    }
+}
+
+.fotos4 {
+    width: 800px;
+    width: 600px;
+    overflow: hidden;
+    margin: 10px;
+
+    .cuartaFoto {
+        width: 100%;
+        height: 100%;
+        transition: 0.5s;
+        object-fit: cover;
+
+        &:hover {
+            transform: scale(1.2);
+        }
+    }
+}
+
 .publicidadNikon1 {
     grid-area: publicidadNikon1;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
+
+    .videoNikon {
+        margin: 10px;
+        border: 10px solid #FFE100;
+
+        &:hover {
+            border: 5px solid #FFE100;
+        }
+    }
 }
 
 /* FIN PAGINA FOTOS ------------------------------------------------------------------------------- FIN PAGINA FOTOS */
