--- a/scss/index/_main2.scss
+++ b/scss/index/_main2.scss
@@ -8,11 +8,12 @@
     color: #FFFFFF;
     width: 50%;
     background-color: #00315A;
-    border: 3px solid #FFFFFF;
+    border: 3px solid #FFE100;
     padding: 20px;
+    margin-bottom: 10px;
 
     h1 {
-        color: yellow;
+        color: #FFE100;
         margin-bottom: 20px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-weight: bolder;
@@ -28,7 +29,7 @@
     #nikonBoton {
         border: none;
         padding: 10px;
-        background-color: yellow;
+        background-color: #FFE100;
         color: black;
         border-radius: 2px;
         border-bottom: 03px solid #000000;
@@ -42,7 +43,7 @@
         padding: 15px;
         background-color: #000000;
         color: #FFFFFF;
-        border-bottom: 03px solid yellow;
+        border-bottom: 03px solid #FFE100;
     }
 }
 
